[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobility"
version = "0.1"
dependencies = [
  "geopandas>=1.1,<1.2",
  "numpy>=2.0,<3",
  "pandas>=2.3,<3.1",
  "scipy>=1.11,<2",
  "requests>=2.32,<3",
  "shortuuid>=1.0,<2",
  "pyarrow>=23.0,<24",
  "openpyxl>=3.1,<4",
  "py7zr>=1.1,<2",
  "rich>=14,<15",
  "python-dotenv>=1,<2",
  "geojson>=3,<4",
  "matplotlib>=3.10,<4",
  "seaborn>=0.13,<0.14",
  "pyogrio>=0.12,<1",
  "polars>=1.39.3,<1.40",
  "psutil>=7,<8",
  "networkx>=3.5,<4",
  "plotly>=6.0,<7",
  "scikit-learn>=1.8,<1.9",
  "gtfs_kit>=12.0,<13",
  "kaleido>=1.2,<2",
  "pydantic>=2.12,<3",
  "tenacity>=9,<10",
]

requires-python = ">=3.11"
authors = [
    { name = "Louise Gontier", email = "l.gontier@elioth.fr" },
    { name = "Félix Pouchain", email = "felix.pouchain@arep.fr" },
    { name = "Capucine-Marin Dubroca-Voisin", email = "capucine-marin.dubroca-voisin@arep.fr" },
    { name = "Lucas Bohnenkamp", email = "lucas.bohnenkamp@arep.fr" }
]
maintainers = []
description = "A tool to simulate the mobility behaviours of the inhabitants of a given region."
readme = "README.md"
keywords = ["mobility", "transport systems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.optional-dependencies]
truststore = [
  "truststore>=0.10,<1",
]

dev = [
  "coverage>=7,<8",
  "flake8>=7,<8",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "pytest-dependency>=0.6,<1",
  "sphinxcontrib-napoleon>=0.7,<1",
  "myst_parser>=3,<6",
]

spyder = [
    "spyder-kernels"
]

[project.urls]
Homepage = "https://mobility-team.github.io/"
Documentation = "https://mobility.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/mobility-team/mobility"
Issues = "https://github.com/mobility-team/mobility/issues"
Changelog = "https://github.com/mobility-team/mobility/releases"

[tool.setuptools.package-data]
mobility = [
    "data/gtfs/gtfs_route_types.csv",
    "resources/*",
    "r_utils/*",
    "**/*.R"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mobility*"]
exclude = ["certs", "certs.*"]

[tool.pytest.ini_options]
markers = [
    "dependency: mark a test as depending on one or more other tests",
]
